--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     
     <div class="container">
+
+      <div id="score">
+        <h2>0</h2>
+      </div>
       
       <div id="game-box">
         <!-- //* los elementos serán añadidos aqui por medio de javascript (manipulación de DOM) -->
